--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/e2e/specs"
   },
   "dependencies": {
+    "firebase": "^5.0.3",
     "string-similarity": "^1.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
